assets/scss/municipal-money.scss
.leaflet-objects-pane {
    position: relative;
    top: 15px;
}

.indicator-chart {
    .axis {
        font: 16px sans-serif;
    }

    .axis path,
    .axis .tick line,
    .grid path {

        display: none
    }

    .grid .tick {
        opacity: 0.1
    }


    .focus .rect {
        fill: rgba(0,0,0,0.5)
    }

    .focus .label {
        opacity: 1
    }


    .focus .labelBackground {
        opacity: 1;
        filter:url(#shadow);
    }

    font-size: 12px;

}

p .button {
    padding: 5px;
}

//= Twitter typeahead
.tt-hint {
  visibility: hidden;
}

.tt-menu {
  min-width: 160px;
  width: 100%;
  margin-top: 2px;
  padding: 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border-right-width: 2px;
  border-bottom-width: 2px;
  border-radius: 4px;
  height: 320px;
  overflow-y: auto;
}
.tt-menu h2 {
  font-size: 1.2em;
  padding: .83em;
  margin-bottom: 0;
  background-color: #014948;
  color: #fff;
}
.tt-suggestion {
  display: block;
  padding: 1.25em .83em .83em;
  margin: 0;
  border-bottom: 1px solid #e0e0e0;
}

.tt-suggestion.tt-cursor,
.tt-suggestion:hover {
  color: #fff;
  background-color: grey;
  cursor: pointer;
}

.tt-suggestion h5,
.tt-suggestion p {
  line-height: 1.5;
  margin: 0 0 .5em;
  font-size: 1em;
}

.twitter-typeahead,
.twitter-typeahead .tt-query,
.twitter-typeahead .tt-hint {
  width: 100%;
}

.tt-dataset-always .result-name {
  font-size: .83em;
}

.tt-suggestion.result-name .result-type {
  float: right;
  margin: .17em .33em 0 1em;
  font-size: .83em;
  font-style: italic;
}

